# roundtable

./: CHANGELOG.md  pyproject.toml
claudable_helper/cli/adapters/: claude_code.py  claude_sdk_compat.py  codex_cli.py  copilot_cli.py  cursor_agent.py
claudable_helper/services/: claude_act.py
roundtable_mcp_server/: availability_checker.py  error_handler.py  metrics.py  server.py
tests/unit/: test_availability_checker.py  test_claude_sdk_compat.py  test_codex_cli.py
