[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roundtable-ai"
version = "0.5.1"
description = "Zero-configuration MCP server that unifies multiple AI coding assistants (Codex, Claude Code, Cursor, Gemini) through intelligent auto-discovery and standardized interface"
authors = [{name = "Roundtable AI", email = "support@askbudi.ai"}]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: System :: Systems Administration",
    "Environment :: Console",
    "Framework :: AsyncIO",
]
dependencies = [
    "fastmcp>=0.1.0",
    "aiohttp>=3.8.0",
    "claude_code_sdk",
    "pydantic>=2.7",
    "tinyagent-py>=0.1.18",
    "httpx>=0.27.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
roundtable-mcp-server = "roundtable_mcp_server.server:main"
roundtable-ai = "roundtable_mcp_server.server:main"

[project.urls]
Homepage = "https://askbudi.ai/roundtable"
Repository = "https://github.com/askbudi/roundtable"
Documentation = "https://askbudi.ai/roundtable"

[tool.setuptools.packages.find]
where = ["."]
include = ["roundtable_mcp_server*", "claudable_helper*"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
